--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -37,16 +37,15 @@ Load additional packages for vignette plotting.
 ```{r, message=FALSE, warning=FALSE}
 library(ggthemes)
 library(ggiraph)
+library(ggplotify)
 ```
 
 
 ## Building a NanoStringRCCSet from .RCC files 
 
 ```{r}
-###### Need to update once data up in repo###########
 setwd("~/NAS_data/dhenderson/360TestData/IO/demo")
-#####################################################
-rcc_files <- list.files(file.path( "." , "RCCs" ) , full.names = TRUE , pattern = ".RCC" )
+rcc_files <- list.files( file.path( "." , "RCCs" ) , full.names = TRUE , pattern = ".RCC" )
 rlf_file <- file.path( "." , "NS_IO_360_v1.0.rlf" )
 sample_annotation <- file.path( "." , "TRTDEMO_Annotation.csv" )
 
@@ -176,7 +175,7 @@ head( protocolData( demoData )[["QCBorderlineFlags"]], 2 )
 
 Binding Density QC
 ```{r}
-theme_set( theme_gray( base_family = "sans" ) )
+theme_set( theme_gray( base_family = "Arial" ) )
 
 ###### Remove tooltip call after bug fix
 girafe( ggobj = autoplot( demoData , "bindingDensity-mean", tooltipID = dimLabels( demoData )[2]  ) )
@@ -235,7 +234,11 @@ strwrpr <- function(x) {
 
 girafe( ggobj = autoplot( demoData , "boxplot-feature" , index = "Endogenous_TAP2_NM_018833.2" , elt = "exprs" ) )
 
-as.ggplot(autoplot( demoData , "heatmap-genes" , elt = "exprs_norm" ))
+####### Remove once bug fixed ##########
+plot.new()
+########################################
+
+autoplot( demoData , "heatmap-genes" , elt = "exprs_norm" )
 ```
 
 ```{r}
