--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -44,15 +44,13 @@ library(ggplotify)
 ## Building a NanoStringRCCSet from .RCC files 
 
 ```{r}
-setwd("~/NAS_data/dhenderson/360TestData/IO/demo")
-rcc_files <- list.files( file.path( "." , "RCCs" ) , full.names = TRUE , pattern = ".RCC" )
-rlf_file <- file.path( "." , "NS_IO_360_v1.0.rlf" )
-sample_annotation <- file.path( "." , "TRTDEMO_Annotation.csv" )
-
-demoData <- readNanoStringRccSet( rccFiles = rcc_files ,
-                                  rlfFile = rlf_file ,
-                                  phenoDataFile = sample_annotation ,
-                                  phenoDataRccColName = "RCC" )
+datadir <- system.file("extdata", "3D_Bio_Example_Data",
+                       package = "NanoStringNCTools")
+rcc_files <- dir(datadir, pattern = "SKMEL.*\\.RCC$", full.names = TRUE)
+rlf_file <- file.path(datadir, "3D_SolidTumor_Sig.rlf")
+sample_annotation <- file.path(datadir, "3D_SolidTumor_PhenoData.csv")
+demoData <- readNanoStringRccSet(rcc_files, rlfFile = rlf_file, 
+                                 phenoDataFile = sample_annotation)
 class( demoData )
 isS4( demoData )
 is( demoData, "ExpressionSet" )
@@ -74,10 +72,11 @@ head( sData(demoData), 2 )
 Design information can be assigned to the NanoStringRCCSet object, as well as feature and sample labels to use for NanoStringRCCSet plotting methods.
 
 ```{r}
-design( demoData ) <- ~ `Mutational Status`
+design( demoData ) <- ~ `Treatment`
 design( demoData )
 
 dimLabels( demoData )
+protocolData(demoData)[["Sample ID"]] <- sampleNames(demoData)
 dimLabels( demoData )[2] <- "Sample ID"
 dimLabels( demoData )
 ```
@@ -90,10 +89,10 @@ Easily summarize count results using the summary method. Data summaries can be g
 ```{r}
 head( summary( demoData , MARGIN = 1 ), 2 )
 head( summary( demoData , MARGIN = 2 ), 2 )
-unique( sData( demoData )$"Mutational Status" )
-head( summary( demoData , MARGIN = 2, GROUP = "Mutational Status" )$Mutated, 2 )
-head( summary( demoData , MARGIN = 2, GROUP = "Mutational Status" )$"Not Mutated", 2 )
-head( summary( demoData , MARGIN = 2, GROUP = "Mutational Status", log2 = FALSE )$"Not Mutated", 2 )
+unique( sData( demoData )$"Treatment" )
+head( summary( demoData , MARGIN = 2, GROUP = "Treatment" )$VEM, 2 )
+head( summary( demoData , MARGIN = 2, GROUP = "Treatment" )$"DMSO", 2 )
+head( summary( demoData , MARGIN = 2, GROUP = "Treatment", log2 = FALSE )$"DMSO", 2 )
 ```
 
 
@@ -104,11 +103,11 @@ Common subsetting methods including those to separate endogenous features from c
 ```{r}
 length( sampleNames( demoData ) )
 length( sampleNames( subset( demoData , 
-                             select = phenoData( demoData )[["Mutational Status"]] == "Mutated" ) ) )
+                             select = phenoData( demoData )[["Treatment"]] == "VEM" ) ) )
 
 dim( exprs( demoData ) )
 dim( exprs( endogenousSubset( demoData, 
-                              select = phenoData( demoData )[["Mutational Status"]] == "Mutated" ) ) )
+                              select = phenoData( demoData )[["Treatment"]] == "VEM" ) ) )
 
 with( housekeepingSubset( demoData ) , table( CodeClass ) )
 with( negativeControlSubset( demoData ) , table( CodeClass ) )
@@ -129,7 +128,7 @@ assayDataElement( demoData, "demoElem" )[1:3, 1:2]
 assayDataApply( demoData, MARGIN=1, FUN=mean, elt="demoElem")[1:5]
 
 head( esBy( demoData, 
-            GROUP = "Mutational Status", 
+            GROUP = "Treatment", 
             FUN = function( x ) { 
               assayDataApply( x, MARGIN = 1, FUN=mean, elt="demoElem" ) 
             } ) )
@@ -154,7 +153,7 @@ neg_ctrls <- munge( neg_set )
 head( neg_ctrls, 2 )
 class( neg_ctrls )
 head( munge( demoData ), 2 )
-munge( demoData, mapping = ~`Therapeutic Response` + GeneMatrix )
+munge( demoData, mapping = ~`BRAFGenotype` + GeneMatrix )
 
 exprs_df <- transform( assayData( demoData )[["exprs_norm"]] )
 class( exprs_df )
@@ -176,46 +175,26 @@ head( protocolData( demoData )[["QCBorderlineFlags"]], 2 )
 Binding Density QC
 ```{r}
 theme_set( theme_gray( base_family = "Arial" ) )
-
-###### Remove tooltip call after bug fix
-girafe( ggobj = autoplot( demoData , "bindingDensity-mean", tooltipID = dimLabels( demoData )[2]  ) )
-girafe( ggobj = autoplot( demoData , "bindingDensity-sd", tooltipID = dimLabels( demoData )[2]  ) )
+girafe( ggobj = autoplot( demoData , "bindingDensity-mean" ) )
+girafe( ggobj = autoplot( demoData , "bindingDensity-sd" ) )
 ```
 
 QC by Lane
 ```{r}
-###### To remove once bug fixes #########
-hkSet <- summary( housekeepingSubset( demoData ) , 2L , elt = "exprs" )
-#########################################
-
-###### Remove tooltip call after bug fix
-girafe( ggobj = autoplot( demoData , "lane-bindingDensity", tooltipID = dimLabels( demoData )[2]  ) )
-girafe( ggobj = autoplot( demoData , "lane-fov", tooltipID = dimLabels( demoData )[2] ) )
+girafe( ggobj = autoplot( demoData , "lane-bindingDensity" ) )
+girafe( ggobj = autoplot( demoData , "lane-fov" ) )
 ```
 
 Housekeeping Genes QC
 ```{r}
-subData <- subset( demoData, select = phenoData( demoData )[["Mutational Status"]] == "Not Mutated" )
-
-###### To remove once bug fixes #########
-hkData <- housekeepingSubset( subData )
-subData[["hkStats"]] <- summary( hkData , 2L , elt = "exprs" )
-rownames( subData[["hkStats"]] ) <- pData( subData )[, dimLabels( subData )[2]]
-#########################################
-
-###### Remove tooltip call after bug fix
-girafe( ggobj = autoplot( subData, "housekeep-geom", tooltipID = dimLabels( subData )[2] ) )
+subData <- subset( demoData, select = phenoData( demoData )[["Treatment"]] == "DMSO" )
+girafe( ggobj = autoplot( subData, "housekeep-geom" ) )
 ```
 
 ERCC QC
 ```{r}
-###### To remove once bug fixes #########
-nrows <- function( x ) { return( nrow( x ) ) }
-#########################################
-
-###### Remove tooltip call after bug fix
-girafe( ggobj = autoplot( demoData , "ercc-linearity", tooltipID = dimLabels( demoData )[2] ) )
-girafe( ggobj = autoplot( subData , "ercc-lod", tooltipID = dimLabels( subData )[2] ) )
+girafe( ggobj = autoplot( demoData , "ercc-linearity" ) )
+girafe( ggobj = autoplot( subData , "ercc-lod" ) )
 ```
 
 ## Data exploration
@@ -223,21 +202,7 @@ girafe( ggobj = autoplot( subData , "ercc-lod", tooltipID = dimLabels( subData )
 Further data exploration can be performed by visualizing a select feature's expression or by getting a bird's eye view with expression heatmaps auto-generated with unsupervised clustering dendrograms.
 
 ```{r}
-###### To remove once bug fixes #########
-strwrpr <- function(x) {
-  if(!grepl(' ', x)) {
-    x <- gsub('(.{16})', '\\1 ', x)
-  }
-  paste(strwrap(x, 16), collapse = '\n')
-}
-#########################################
-
 girafe( ggobj = autoplot( demoData , "boxplot-feature" , index = "Endogenous_TAP2_NM_018833.2" , elt = "exprs" ) )
-
-####### Remove once bug fixed ##########
-plot.new()
-########################################
-
 autoplot( demoData , "heatmap-genes" , elt = "exprs_norm" )
 ```
 
