--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -202,7 +202,7 @@ girafe( ggobj = autoplot( subData , "ercc-lod" ) )
 Further data exploration can be performed by visualizing a select feature's expression or by getting a bird's eye view with expression heatmaps auto-generated with unsupervised clustering dendrograms.
 
 ```{r}
-girafe( ggobj = autoplot( demoData , "boxplot-feature" , index = "Endogenous_TAP2_NM_018833.2" , elt = "exprs" ) )
+girafe( ggobj = autoplot( demoData , "boxplot-feature" , index = featureNames(demoData)[3] , elt = "exprs" ) )
 autoplot( demoData , "heatmap-genes" , elt = "exprs_norm" )
 ```
 
