--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 1.1.3 (2022-01-12)
++ Enable compatibility with Gen 2.5 RCCs
+
 Changes in version 1.1.2 (2020-09-28)
 + Update license
 
