--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
-Changes in version 1.1.3 (2022-01-12)
+Changes in version 1.3.1 (2022-01-12)
 + Enable compatibility with Gen 2.5 RCCs
+
+Changes in version 1.3.0 (2021-10-26)
++ Initial Bioconductor devel 3.14 version
+
+Changes in version 1.2.0 (2021-10-26)
++ Bioconductor release 3.14 version
 
 Changes in version 1.1.2 (2020-09-28)
 + Update license
