--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 1.5.1 (2022-10-10)
++ Bug fix in normalization nSolver method
+
 Changes in version 1.3.1 (2022-01-12)
 + Enable compatibility with Gen 2.5 RCCs
 
