--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in version 1.16.2 (2025-09-26)
++ Bug fixes for dependency package updates
+
 Changes in version 1.11.1 (2024-04-10)
 + Remove setting font in vignette
 
